fixed sticky footer on mobile

--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ a {
 }
 
 .project-img {
-   width: 90%;
+   width: 98%;
    border-radius: 1rem;
 }
 
@@ -334,7 +334,8 @@ a {
    margin: auto;
 }
 
-.project-img-item {
+.project-img-item,
+.project-img-item a {
    display: flex;
    justify-content: center;
    align-items: center;
@@ -470,6 +471,8 @@ a {
    background-color: var(--offwhite-color);
    z-index: 1;
    background-image: var(--background-noise);
+   padding-top: 10px;
+   padding-bottom: 10px;
 }
 
 .sticky-footer.dark {
@@ -488,6 +491,7 @@ a {
 .time-text {
    font-family: var(--regular-font-family);
    color: var(--blue-color);
+   font-size: 1.2rem;
 }
 
 .time-text.dark {
@@ -502,7 +506,7 @@ a {
 }
 
 .star-light {
-   width: 18px;
+   width: 20px;
    cursor: pointer;
    -webkit-animation: rotate 20s linear infinite;
    animation: rotate 20s linear infinite;
@@ -510,7 +514,7 @@ a {
 
 .star-dark {
    display: none;
-   width: 18px;
+   width: 20px;
    cursor: pointer;
    animation: rotate 20s linear infinite;
 }
@@ -730,6 +734,10 @@ a {
 
    .projects-container-mobile {
       display: none;
+   }
+
+   .project-img {
+      width: 90%;
    }
 
    .proj-link {
